# entertainment

./: .gitignore  DEEPSEEK_ENV_UPDATE.md  README.md  entertaiment-project-key  entertaiment-project-key.pub  events_site_plan.md
.github/workflows/: backup_venues.yml  discover_sources.yml  parse.yml  refresh_venues.yml
docs/: Условия бесплатного использования API Яндекс.md
parser/: .env.example  DEEPSEEK_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
parser/config/: seeds.yaml
parser/scripts/: notify_warnings.py
parser/src/parser/: __init__.py  classifiers.py  cli.py  config.py  db.py  dedup.py  http_utils.py  merge.py  models.py  pipeline.py  taxonomy.py  url_utils.py  validator.py
parser/src/parser/discovery/: __init__.py  base.py  listing.py  sitemap.py
parser/src/parser/extraction/: __init__.py  _errors.py  base.py  deepseek_extractor.py  fallback.py  gemini_extractor.py  groq_extractor.py  jsonld.py  prompts.py  retry.py
parser/src/parser/sources/: __init__.py  candidate_sources.py  generic.py  kudago.py  permm.py  permopera.py  playwright_2gis.py  playwright_fetcher.py  quizplease.py  telegram.py  timepad.py  twogis.py  vk.py
parser/tests/: conftest.py  test_candidate_sources.py  test_classifiers.py  test_db.py  test_discovery.py  test_extractors.py  test_fallback.py  test_generic.py  test_jsonld.py  test_kudago.py  test_merge.py  test_permm.py  test_permopera.py  test_pipeline_warnings.py  test_playwright_2gis.py  test_spurious_always.py  test_telegram.py  test_timepad.py  test_url_utils.py  test_validator.py  test_vk.py
parser/tests/fixtures/: permm_events.json  permm_exhibitions.json  permopera_playbill.json
prototype/: index.html  style.css
supabase/migrations/: 20260611000001_add_tags.sql  20260611000002_add_fingerprint.sql  20260611000003_add_raw_documents.sql  20260611000004_add_source_health.sql  (+9 more)
web/: .env.example  README.md  next.config.ts  package-lock.json
web/app/: globals.css  (+3 more)
(+26 files in other folders)
