[project]
name = "events-parser"
version = "0.1.0"
requires-python = ">=3.10"
description = "Discovery + LLM-extraction pipeline для парсинга событий в БД."

dependencies = [
    "httpx>=0.27,<1.0",
    "selectolax>=0.3.21,<1.0",
    "google-genai>=1.0,<2.0",
    "groq>=0.20,<1.0",
    "markdownify>=0.13,<2.0",
    "supabase>=2.9,<3.0",
    "pydantic>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.1,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
parser-cli = "parser.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
